<resources>
    <string name="app_name">TIp Time</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="okay_radio">Hmmm (15%)</string>
    <string name="good_radio">Good (18%)</string>
    <string name="awesome_radio">Awesome (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service">Cost of Service</string>
</resources>